Start Editing HomePage Style

--- a/src/Components/Website/Landing/Landing.css
+++ b/src/Components/Website/Landing/Landing.css
@@ -1,3 +1,19 @@
+.landing {
+  position: relative;
+  background-image: url(../../../Assets/BackGround.jpg);
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+}
+
+.landing .landing-contain {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding-top: 70px;
+}
+
 .landing .text {
   max-width: 400px;
   width: 100%;
