--- a/src/Components/Dashboard/Bars/bars.css
+++ b/src/Components/Dashboard/Bars/bars.css
@@ -1,41 +1,41 @@
 .top-bar {
-  position: relative;
   background-color: transparent;
-  top: 0px;
-  left: 0;
-  height: 70px;
-  padding: 0 20px;
+  height: 50px;
+  padding: 20px 0;
 }
 
 .side-bar {
+  position: absolute;
   left: 0px;
   top: 0;
   bottom: 0;
-  box-shadow: 0 10px 5px rgba(255, 255, 255, 0.5);
+  background-color: white;
+  box-shadow: 1px 2px 5px rgba(255, 255, 255, 0.651);
   border-right: 2px solid rgba(255, 255, 255, 0.712);
-  z-index: 1;
-  height: calc(100vh - 70px);
+  z-index: 2;
+  height: calc(100vh +100px);
+  transition: 0.5s;
 }
 
 .side-bar-link {
-  color: white;
+  color: #155bac;
   border-radius: 6px;
   font-size: 18px;
   transition: 0.3s;
   margin: 0px 8px;
 }
 
-.side-bar-link .side-bar-link:hover {
-  color: rgb(24, 24, 24);
+.side-bar-link:hover {
+  color: #1e8bff;
 }
 
 .side-bar .active {
-  background-color: #f2f3fe;
-  color: #038edc;
+  background-color: #155bac;
+  color: white;
 }
 
 .side-bar .active:hover {
-  color: #038edc;
+  color: rgb(228, 228, 228);
 }
 a {
   text-decoration: none !important;
