--- a/src/Components/Dashboard/Bars/bars.css
+++ b/src/Components/Dashboard/Bars/bars.css
@@ -6,15 +6,14 @@
 
 .side-bar {
   position: absolute;
-  left: 0px;
+  left: 0;
   top: 0;
   bottom: 0;
   background-color: white;
   box-shadow: 1px 2px 5px rgba(255, 255, 255, 0.651);
   border-right: 2px solid rgba(255, 255, 255, 0.712);
-  z-index: 2;
-  height: calc(100vh +100px);
   transition: 0.5s;
+  z-index: 2;
 }
 
 .side-bar-link {
@@ -27,16 +26,20 @@
 
 .side-bar-link:hover {
   color: #1e8bff;
+  transition: 0.3s;
 }
 
 .side-bar .active {
   background-color: #155bac;
   color: white;
+  transition: 0.5s;
 }
 
 .side-bar .active:hover {
   color: rgb(228, 228, 228);
+  transition: 0.3s;
 }
+
 a {
   text-decoration: none !important;
 }
