--- a/src/Components/Dashboard/Spinner/loading.css
+++ b/src/Components/Dashboard/Spinner/loading.css
@@ -1,12 +1,13 @@
 .spin-container {
-  position: fixed;
+  position: absolute;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.2);
   top: 0;
+  left: 0;
   z-index: 1;
 }
 
